--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -936,7 +936,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\base.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\base.css"
         }
       },
       {
@@ -980,7 +980,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-mega-menu.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-mega-menu.css"
         }
       },
       {
@@ -991,7 +991,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-mobile-menu.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-mobile-menu.css"
         }
       },
       {
@@ -1002,7 +1002,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-modal.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-modal.css"
         }
       },
       {
@@ -1013,7 +1013,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-search-modal.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-search-modal.css"
         }
       },
       {
@@ -1024,18 +1024,18 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-search-tabs.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-search-tabs.css"
         }
       },
       {
         "file": "sections/section-ajax-cart.scss",
         "config": {
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-ajax-cart.css",
           "tasks": {
             "minify-css": {
               "enable": true
             }
-          }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-ajax-cart.css"
         }
       },
       {
@@ -1112,7 +1112,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-footer.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-footer.css"
         }
       },
       {
@@ -1123,7 +1123,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-header.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.css"
         }
       }
     ]
