fix desktop menu js , style search

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -981,7 +981,19 @@
       {
         "file": "details-modal.js",
         "config": {
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\details-modal.js",
+          "autoCompile": true,
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\details-modal.js"
+        }
+      },
+      {
+        "file": "details-open.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\details-open.js",
           "autoCompile": true
         }
       },
@@ -1021,8 +1033,13 @@
       {
         "file": "section-header.js",
         "config": {
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-header.js",
-          "autoCompile": true
+          "autoCompile": true,
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.js"
         }
       }
     ]
