delete icons css

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1001,12 +1001,12 @@
         "file": "global.js",
         "config": {
           "autoCompile": true,
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\global.js",
           "tasks": {
             "minify-js": {
               "enable": false
             }
-          }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\global.js"
         }
       },
       {
