--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -947,7 +947,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-card-products.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-card-products.css"
         }
       },
       {
