--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -962,13 +962,13 @@
       {
         "file": "cart-drawer.js",
         "config": {
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\cart-drawer.js",
+          "autoCompile": true,
           "tasks": {
             "minify-js": {
               "enable": false
             }
           },
-          "autoCompile": true
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\cart-drawer.js"
         }
       },
       {
