--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1090,7 +1090,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-featured-products.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-products.css"
         }
       },
       {
