--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -969,7 +969,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-footer.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-footer.css"
         }
       },
       {
