--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1046,7 +1046,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-featured-hero.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-hero.css"
         }
       },
       {
@@ -1058,6 +1058,12 @@
             }
           },
           "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-featured-large-text.css"
+        }
+      },
+      {
+        "file": "sections/section-featured-list-collections.scss",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections.css"
         }
       },
       {
