add collection style block

--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1061,6 +1061,61 @@
         }
       },
       {
+        "file": "sections/section-featured-list-collections-block-menu.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-block-menu.css"
+        }
+      },
+      {
+        "file": "sections/section-featured-list-collections-block.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-block.css"
+        }
+      },
+      {
+        "file": "sections/section-featured-list-collections-collage.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-collage.css"
+        }
+      },
+      {
+        "file": "sections/section-featured-list-collections-default.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-default.css"
+        }
+      },
+      {
+        "file": "sections/section-featured-list-collections-grid.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-grid.css"
+        }
+      },
+      {
         "file": "sections/section-featured-list-collections.scss",
         "config": {
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections.css"
