--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1116,6 +1116,12 @@
         }
       },
       {
+        "file": "sections/section-featured-list-collections-menu.scss",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-menu.css"
+        }
+      },
+      {
         "file": "sections/section-featured-list-collections.scss",
         "config": {
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections.css"
