--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1039,6 +1039,17 @@
         }
       },
       {
+        "file": "sections/section-announcement-bar-default.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-announcement-bar-default.css"
+        }
+      },
+      {
         "file": "sections/section-featured-hero.scss",
         "config": {
           "tasks": {
