--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1157,7 +1157,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-featured-multi-column.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-multi-column.css"
         }
       },
       {
