add cookie section

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -979,6 +979,13 @@
         }
       },
       {
+        "file": "cookie-notice.js",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\cookie-notice.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "details-modal.js",
         "config": {
           "autoCompile": true,
