add newsletter pprom section

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -67,7 +67,17 @@
           "*.coffee",
           "*.kit",
           "*.turf",
-          "*.ts"
+          "*.ts",
+          "/global.js",
+          "/helper-functions.js",
+          "/accordion-element.js",
+          "/scroll-up.js",
+          "/bodyScrollLock.min.js",
+          "/section-header.js",
+          "/component-tabs.js",
+          "/header-search.js",
+          "/details-modal.js",
+          "/ajax-cart.js"
         ],
         "exceptions": []
       }
@@ -929,301 +939,114 @@
     },
     "files": [
       {
-        "file": "base.scss",
+        "file": "accordion-element.js",
         "config": {
+          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\accordion-element.js",
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "ajax-cart.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\ajax-cart.js"
+        }
+      },
+      {
+        "file": "bodyScrollLock.min.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\bodyScrollLock.min.js"
+        }
+      },
+      {
+        "file": "cart-drawer.js",
+        "config": {
+          "autoCompile": true,
           "tasks": {
-            "minify-css": {
-              "enable": true
+            "minify-js": {
+              "enable": false
             }
           },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\base.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\cart-drawer.js"
         }
       },
       {
-        "file": "components/component-card-products.scss",
+        "file": "component-tabs.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-tabs.js"
+        }
+      },
+      {
+        "file": "cookie-notice.js",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\cookie-notice.js",
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "details-modal.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\details-modal.js"
+        }
+      },
+      {
+        "file": "details-open.js",
         "config": {
           "tasks": {
-            "minify-css": {
-              "enable": true
+            "minify-js": {
+              "enable": false
             }
           },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-card-products.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\details-open.js",
+          "autoCompile": true
         }
       },
       {
-        "file": "components/component-cart-notification.scss",
+        "file": "global.js",
         "config": {
+          "autoCompile": true,
           "tasks": {
-            "minify-css": {
-              "enable": true
+            "minify-js": {
+              "enable": false
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\component-cart-notification.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\global.js"
         }
       },
       {
-        "file": "components/component-footer.scss",
+        "file": "header-search.js",
         "config": {
+          "autoCompile": true,
+          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\header-search.js"
+        }
+      },
+      {
+        "file": "helper-functions.js",
+        "config": {
+          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\helper-functions.js",
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "scroll-up.js",
+        "config": {
+          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\scroll-up.js",
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "section-header.js",
+        "config": {
+          "autoCompile": true,
           "tasks": {
-            "minify-css": {
-              "enable": true
+            "minify-js": {
+              "enable": false
             }
           },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-footer.css"
-        }
-      },
-      {
-        "file": "components/component-mega-menu.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-mega-menu.css"
-        }
-      },
-      {
-        "file": "components/component-mobile-menu.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-mobile-menu.css"
-        }
-      },
-      {
-        "file": "components/component-modal.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-modal.css"
-        }
-      },
-      {
-        "file": "components/component-search-modal.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-search-modal.css"
-        }
-      },
-      {
-        "file": "components/component-search-tabs.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-search-tabs.css"
-        }
-      },
-      {
-        "file": "sections/section-ajax-cart.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-ajax-cart.css"
-        }
-      },
-      {
-        "file": "sections/section-announcement-bar-default.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-announcement-bar-default.css"
-        }
-      },
-      {
-        "file": "sections/section-cookie-notice.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-cookie-notice.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-hero.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-hero.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-large-text.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-featured-large-text.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-block-menu.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-block-menu.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-block.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-block.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-collage.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-collage.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-default.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-default.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-grid.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-grid.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections-menu.scss",
-        "config": {
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections-menu.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-collections.scss",
-        "config": {
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-collections.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-list-image.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-featured-list-image.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-multi-column.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-multi-column.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-products.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-products.css"
-        }
-      },
-      {
-        "file": "sections/section-featured-text-image.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-featured-text-image.css"
-        }
-      },
-      {
-        "file": "sections/section-footer.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-footer.css"
-        }
-      },
-      {
-        "file": "sections/section-header.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.css"
-        }
-      },
-      {
-        "file": "sections/section-newsletter-popup.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-newsletter-popup.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.js"
         }
       }
     ]
