add and style section

--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1079,7 +1079,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-featured-large-text.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-large-text.css"
         }
       },
       {
@@ -1190,7 +1190,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-featured-text-image.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-text-image.css"
         }
       },
       {
