add style big_50%

--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1083,6 +1083,17 @@
         }
       },
       {
+        "file": "sections/section-featured-list-banners.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-banners.css"
+        }
+      },
+      {
         "file": "sections/section-featured-list-collections-block-menu.scss",
         "config": {
           "tasks": {
