--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1006,6 +1006,12 @@
         }
       },
       {
+        "file": "components/component-pagination.scss",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-pagination.css"
+        }
+      },
+      {
         "file": "components/component-search-modal.scss",
         "config": {
           "tasks": {
@@ -1025,6 +1031,39 @@
             }
           },
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-search-tabs.css"
+        }
+      },
+      {
+        "file": "pages/main-head.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-head.css"
+        }
+      },
+      {
+        "file": "pages/main-list-collections.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-list-collections.css"
+        }
+      },
+      {
+        "file": "pages/section-main-list-collections.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-main-list-collections.css"
         }
       },
       {
@@ -1168,7 +1207,7 @@
               "enable": true
             }
           },
-          "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\section-featured-list-image.css"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-featured-list-image.css"
         }
       },
       {
@@ -1235,6 +1274,17 @@
             }
           },
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-newsletter-popup.css"
+        }
+      },
+      {
+        "file": "sections/section-rich-text.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-rich-text.css"
         }
       }
     ]
