--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1031,6 +1031,13 @@
         }
       },
       {
+        "file": "main-blog.js",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-blog.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "scroll-up.js",
         "config": {
           "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\scroll-up.js",
